--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^1.13.3
-  audioplayers: ^0.15.1
-  flutter_ffmpeg: ^0.2.10
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  file_picker: ^4.5.1
+  audioplayers: ^0.20.1
+  flutter_ffmpeg: ^0.4.2
 
 dev_dependencies:
   flutter_test:
